feat!: Java and JRE 21 support (#6183)
* migrated code to java 21

* added exclusion for archetype resources

* updated jdk to temurin-jdk21-latest

* Updated maven to 3.9.9

* Fixed test

* fixed some tests.

* fixed test

* cleanup

* upgraded mockito to 5.21.0

* set mockito as agent

* removed parallel tests

* fixed copyright

* removed unsupported option in target-platform-configuration configuration

* replaced obsolete property

* fixed javaagent location

* minor fixes.

* fixed mockito agent path

* fixed error in path again

* removed duplicated property.

* Added maven.compiler.release.
Updated capability for bundles in target-platform

* Replaced jre 17 references with 21

* replaced old compiler properties with maven.compiler.release

* minor changes